--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-progress-bar.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-progress-bar.css
@@ -42,6 +42,7 @@
 
 .content-wrapper .progress .progress-bar{
   color: #fff;
+  line-height: 22px;
 }
 .content-wrapper .progress-bar-reportsdisabled {
   background-color: #b4b4b4;
