Fixes #16326: Display compliance bar in Node details

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-node.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-node.css
@@ -319,3 +319,12 @@ pre.display-keys > label{
   margin-top:12px;
   font-weight:bold;
 }
+.node-compliance-bar .progress{
+  margin        : 0px;
+  border-radius : 3px;
+  height        : 25px;
+}
+.node-compliance-bar .progress-bar span{
+  vertical-align  : middle;
+  horizontal-align: middle;
+}
