--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-datatable.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-datatable.css
@@ -28,6 +28,7 @@
   height: 30px;
   padding: 5px 10px;
   font-size: 12px;
+  font-weight: initial;
   line-height: 1.5;
   border-radius: 3px;
   border: 1px solid #d0d0d0;
