Fixes #16840: Impossible to scroll through technique list in the technique editor

--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -229,6 +229,7 @@ body > .container-fluid > .row > div {
   margin-top: 10px;
   padding: 0;
   border-top: 2px solid #e5e5e5;
+  overflow-y: scroll;
 }
 .techniques-list-container > ul {
   list-style: none;
