Fixes #16843: Scrollbar is always visible in technique editor techique's list

--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -229,7 +229,7 @@ body > .container-fluid > .row > div {
   margin-top: 10px;
   padding: 0;
   border-top: 2px solid #e5e5e5;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 .techniques-list-container > ul {
   list-style: none;
